--- a/publication/index.html
+++ b/publication/index.html
@@ -137,6 +137,47 @@
           <div class="universal-wrapper" style="display: block;">
             <div class="row">
                 <div class="col-lg-12">
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">AppBench: Planning of Multiple APIs from Various APPs for Complex User Instruction</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list"><strong>Hongru WANG</strong>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
+                      <span><i>EMNLP 2024</i></span> (apple intelligence, graph execution, permission management)
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2403.08319.pdf">Knowledge Conflicts for LLMs: A Survey </a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list">Rongwu Xu, Zehan Qi, Zhijiang Guo, Cunxiang Wang, <strong>Hongru WANG</strong>, Yue Zhang, Wei Xu</span> <br>
+                      <span><i>EMNLP 2024</i></span>
+                    </div>
+
+                     <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">VLEU: a Method for Automatic Evaluation for Generalizability of Text-to-Image Models</a> 
+                      <img src="https://img.shields.io/badge/MM-red"> <br>
+                      <span class="author_list">Jingtao Cao, Zhang Zheng, <strong>Hongru WANG</strong>, Kam-Fai Wong</span> <br>
+                      <span><i>EMNLP 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Enhancing Biomedical Knowledge Retrieval-Augmented Generation with Self-Rewarding Tree Search and Proximal Policy Optimization</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                      <span class="author_list">Minda Hu, Licheng Zong, <strong>Hongru WANG</strong>, Jingyan Zhou, Jingjing Li, Yichen Gao, Kam-Fai Wong, Yu Li, Irwin King</span> <br>
+                      <span><i>Findings, EMNLP 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Less is More: Making Smaller Language Models Competent Subgraph Retrievers for Multi-hop KGQA</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                      <span class="author_list">Wenyu Huang, Guancheng Zhou, <strong>Hongru WANG</strong>, Pavlos Vougiouklis, Mirella Lapata, Jeff Z. Pan</span> <br>
+                      <span><i>Findings, EMNLP 2024</i></span>
+                    </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
