--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           
           <br>
 
-          <li><strong>Tool Learning</strong>: Besides only modelling physical tools, such as models and APIs, I am interested in how internal cognitive tools (<a href="https://arxiv.org/abs/2309.16090">TPE</a>), like different conversational strategies and reasoning methods, can be combined with external physical tools. I am attracted to the whole life cycle of tool learning, such as tool creation (<a href="https://arxiv.org/abs/2402.16261">UniRetriever</a>), tool selection (<a href="https://arxiv.org/abs/2402.13514">Self-DC</a>) and tool utilization (<a href="/papers/m3sum/m3sum.pdf">M3SUM</a>). Utilizing tool learning to empower LLMs for real-world interaction is both intriguing and impactful. You can check our latest tutorial at SIGIR: <a href="https://rulegreen.github.io/services/tools-meet-llm/">Empoweing LLMs: Tool learning for Real-world Interaction</a>. </li>
+          <li><strong>Tool Learning</strong>: Besides only modelling physical tools, such as models and APIs, I am interested in how internal cognitive tools (<a href="https://arxiv.org/abs/2309.16090">TPE</a>), like different conversational strategies and reasoning methods, can be combined with external physical tools. I am attracted to the whole life cycle of tool learning, such as tool creation (<a href="https://arxiv.org/abs/2402.16261">UniRetriever</a>), tool selection (<a href="https://arxiv.org/abs/2402.13514">Self-DC</a>, AppBench) and tool utilization (<a href="/papers/m3sum/m3sum.pdf">M3SUM</a>). Utilizing tool learning to empower LLMs for real-world interaction is both intriguing and impactful. You can check our latest tutorial at SIGIR: <a href="https://rulegreen.github.io/services/tools-meet-llm/">Empoweing LLMs: Tool learning for Real-world Interaction</a>. </li>
           
           <br>
 
@@ -291,6 +291,9 @@
       <div class="col-12 col-lg-9">
 
         <ul>
+          <li>Sep 2024: Fives papers are accepted by <em>EMNLP 2024</em> (3 main 2 findings), including my first-author AppBench. AppBench is the first benchmark focus on the execution of multiple APIs from various Apps (graph strcuture and persmission management). This is the future Apple Intelligence ! &#x1F525; &#x1F525; &#x1F525; </li>
+
+
           <li>Aug 2024: One paper is accepted by <em>NLPCC 2024</em>, see u at Hangzhou, a very nice and beautiful place. </li>
 
 
@@ -350,6 +353,14 @@
           </div>
         </div>
       -->
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="">AppBench: Planning of Multiple APIs from Various APPs for Complex User Instruction</a> 
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+          <span class="author_list"><strong>Hongru WANG</strong>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
+          <span><i>EMNLP 2024</i></span> (apple intelligence, graph execution, permission management)
+        </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -476,18 +487,18 @@
         <h1>Preprint</h1>
         <p>Draft and Under Review</p>
       </div>
-  
-      <div class="col-12 col-lg-9">
 
-        <div class="pub-list-item" style="margin-bottom: 1rem">
+        <div class="col-12 col-lg-9">
+         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2403.08319.pdf">Knowledge Conflicts for LLMs: A Survey </a> 
+          <a href="">UniMS-RAG: A Unified Multi-source Retrieval-Augmented Generation for Personalized Dialogue Systems</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-          <span class="author_list">Rongwu Xu, Zehan Qi, Cunxiang Wang, <strong>Hongru WANG</strong>, Yue Zhang, Wei Xu</span> <br>
+          <span class="author_list"><strong>Hongru Wang</strong>, Wenyu Huang, Yang Deng, Rui Wang, Zezhong Wang, Yufei Wang, Fei Mi, Jeff Z Pan, Kam-Fai Wong </span> <br>
           <span> Under Review </span>
         </div>
-
+  
+        <div class="col-12 col-lg-9">
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for Compositional Unknown Questions </a> 
