--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for Compositional Unknown Questions </a> 
+          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for Compositional .. </a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><strong>Hongru Wang</strong>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
