--- a/index.html
+++ b/index.html
@@ -452,7 +452,8 @@
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods..</a>
-          <img src="https://img.shields.io/badge/TOD_DPL-teal"> <br>
+          <img src="https://img.shields.io/badge/DS-blue"> 
+          <img src="https://img.shields.io/badge/RL-olive"> <br>
           <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong </span> <br>
           <span><i>Machine Intelligence Research </i> </span>
         </div>
@@ -460,8 +461,8 @@
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
-          <img src="https://img.shields.io/badge/TOD_DPL-teal">
-          <img src="https://img.shields.io/badge/RLAIF-olive"> <br>
+          <img src="https://img.shields.io/badge/DS-blue">
+          <img src="https://img.shields.io/badge/RL-olive"> <br>
           <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong </span> <br>
           <span><i>ICASSP 2022</i></span>
         </div>
@@ -490,7 +491,7 @@
       <div class="col-12 col-lg-9">
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">UniMS-RAG: A Unified Multi-source Retrieval-Augmented Generation for Personalized Dialogue Systems</a> 
+          <a href="">UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><strong>Hongru Wang</strong>, Wenyu Huang, Yang Deng, et. al, Jeff Z Pan, Kam-Fai Wong </span> <br>
@@ -499,7 +500,7 @@
 
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for Compositional .. </a> 
+          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for .. </a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><strong>Hongru Wang</strong>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
