--- a/publication/index.html
+++ b/publication/index.html
@@ -165,7 +165,7 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="">Enhancing Biomedical Knowledge Retrieval-Augmented Generation with Self-Rewarding Tree Search and Proximal Policy Optimization</a> 
+                      <a href="">Enhancing Biomedical Knowledge RAG with Self-Rewarding Tree Search and PPO</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"> <br>
                       <span class="author_list">Minda Hu, Licheng Zong, <strong>Hongru WANG</strong>, Jingyan Zhou, Jingjing Li, Yichen Gao, Kam-Fai Wong, Yu Li, Irwin King</span> <br>
                       <span><i>Findings, EMNLP 2024</i></span>
@@ -181,7 +181,7 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration</a> 
+                      <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools ..</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Yongfeng Huang, Kam-Fai Wong </span> <br>
@@ -216,9 +216,9 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="https://arxiv.org/abs/2403.02756.pdf">Role Prompting Guided Domain Adaptation with General Capability Preserve for Large Language Models</a> 
+                      <a href="https://arxiv.org/abs/2403.02756.pdf">Role Prompting Guided Domain Adaptation with General Capability Preserve for LLM</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
-                      <img src="https://img.shields.io/badge/Continual_Learning-gray"> <br>
+                      <img src="https://img.shields.io/badge/RolePlaying-gray"> <br>
                       <span class="author_list">Rui Wang, Fei Mi, Yi Chen, Boyang XUE, <strong>Hongru Wang</strong>, Qi Zhu, Kam-Fai Wong, Ruifeng Xu </span><br>
                       <span><i>Findings, NAACL 2024</i></span>
                     </div>
@@ -234,7 +234,7 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="tbd">MCIL: Multimodal Counterfactual Instance Learning for Low-resource Entity-based Multimodal Information Extraction</a> 
+                      <a href="tbd">MCIL: Multimodal Counterfactual Instance Learning for .. Multimodal Information Extraction</a> 
                       <img src="https://img.shields.io/badge/MM-red">
                       <img src="https://img.shields.io/badge/LLM-orange"> <br>
                       <span class="author_list">Baohang Zhou, Ying Zhang, Kehui Song, <strong>Hongru WANG</strong>, Yu Zhao, Xuhui Sui and Xiaojie Yuan</span><br>
@@ -252,7 +252,7 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive Conversational Retrieval</a> 
+                      <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive ..</a> 
                       <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list"><strong>Hongru WANG</strong>, Boyang Xue, Baohang Zhou, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Kam-Fai Wong </span><br>
@@ -287,16 +287,15 @@
                           <img src="https://img.shields.io/badge/MM-red"> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><strong>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
-                          <span><i>ICASSP 2024</i></span> <strong style="color:red"> [oral paper] </strong>
+                          <span><i>ICASSP 2024</i></span> <strong style="color:#bf0140"> (oral paper) </strong>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/abs/2310.08840.pdf">Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</a>
-                          <img src="https://img.shields.io/badge/PersonalizedDS-blue">
-                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+                          <img src="https://img.shields.io/badge/DS-blue">
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-                          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai-Chung Kwan, Irwin King, Kam-Fai Wong </span> <br>
+                          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, et. al, Irwin King, Kam-Fai Wong</span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
@@ -326,15 +325,15 @@
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <a href="https://arxiv.org/abs/2310.08372.pdf"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via Knowledge Enhancement and Alignment </a>
-                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
+                          <a href="https://arxiv.org/abs/2310.08372.pdf"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via .. Alignment </a>
+                          <img src="https://img.shields.io/badge/DS-blue"> <br>
                           <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <a href="https://arxiv.org/abs/2305.13626.pdf"> Prompting and Evaluating Large Language Models for Proactive Dialogues: Clarification, Target-guided, and Non-collaboration </a>
+                          <a href="https://arxiv.org/abs/2305.13626.pdf"> Prompting and Evaluating Large Language Models for Proactive Dialogues .. </a>
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"> Yang Deng, Lizi Liao, Liang Chen, <strong>Hongru Wang</strong>, Wenqiang Lei, Tat-Seng Chua </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
@@ -345,7 +344,7 @@
                           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
                           <img src="https://img.shields.io/badge/TOD_NLU-teal"> <br>
                           <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong </span> <br>
-                          <span><em>IJCNLP-AACL 2023</em> <strong style="color:red">[oral paper]</strong></span>
+                          <span><em>IJCNLP-AACL 2023</em> <strong style="color:#bf0140">(oral paper)</strong></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -360,7 +359,7 @@
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                            <a href="https://aclanthology.org/2023.acl-long.364/">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
                           <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
-                          <span class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu </span> <br>
+                          <span class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <strong>Hongru Wang</strong>, et. al, Kam-Fai Wong, Ruifeng Xu </span> <br>
                           <span><i>ACL 2023</i></span>
                         </div>
                     <!-- </div> -->
@@ -447,10 +446,10 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
+                      <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods ..</a>
                       <img src="https://img.shields.io/badge/TOD_DPL-teal"> <br>
                       <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong</span> <br>
-                      <span><i>Machine Intelligence Research</i> <strong style="color:red">[Invited Paper]</strong></span>
+                      <span><i>Machine Intelligence Research</i> </span>
                     </div>
                 
                 </div>
@@ -479,7 +478,7 @@
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion in Question Answering</a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-                          <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, Bin Liang, Baojun Wang, Wanjun Zhong, Zezhong Wang, and Kam-Fai Wong</span><br>
+                          <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, et. al, and Kam-Fai Wong</span><br>
                           <span><i>SIGHAN (Best Paper Award <img src="../images/trophy.png" width="15" height="15">), ACL 2024</i></span>
                         </div>
 
