--- a/publication/index.html
+++ b/publication/index.html
@@ -192,7 +192,7 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Medical Dialogue: A Survey of Categories, Methods, Evaluation and Challenges</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">Xiaoming Shi, Zeming Liu, Li Du, Yuxuan Wang,<strong>Hongru WANG</strong>, Yuhang Guo, Tong Ruan, JIE XU, Shaoting Zhang</span><br>
+                      <span class="author_list">Xiaoming Shi, Zeming Liu, Li Du, Yuxuan Wang, <strong>Hongru WANG</strong>, Yuhang Guo, Tong Ruan, JIE XU, Shaoting Zhang</span><br>
                       <span><i>Findings, ACL 2024</i></span>
                     </div>
 
@@ -305,7 +305,7 @@
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
-                          <img src="https://img.shields.io/badge/PersonalizedDS-blue">
+                          <img src="https://img.shields.io/badge/DS-blue">
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><strong>Hongru Wang*</strong>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
@@ -327,7 +327,7 @@
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/abs/2310.08372.pdf"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via .. Alignment </a>
                           <img src="https://img.shields.io/badge/DS-blue"> <br>
-                          <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong </span> <br>
+                          <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, et. al, Xin Jiang, Qun Liu, Kam-Fai Wong </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
@@ -476,10 +476,10 @@
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion in Question Answering</a> 
+                          <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion .. </a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, et. al, and Kam-Fai Wong</span><br>
-                          <span><i>SIGHAN (Best Paper Award <img src="../images/trophy.png" width="15" height="15">), ACL 2024</i></span>
+                          <span><i>SIGHAN, ACL 2024</i></span> <strong style="color:#bf0140"> (<img src="../images/trophy.png" width="15" height="15"> Best Paper Award) </strong>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -487,7 +487,7 @@
                           <a href="">OSPC: Detecting Harmful Memes with Large Language Model as a Catalyst</a> 
                           <img src="https://img.shields.io/badge/LLM-orange"><br>
                           <span class="author_list">Jingtao Cao, Zheng Zhang, <strong>Hongru WANG</strong>, Bin Liang, Hao Wang, Kam-fai Wong </span><br>
-                          <span><i>Online Safety Prize Challenge Champion, WWW 2024</i></span>
+                          <span><i>Online Safety Prize Challenge, WWW 2024</i></span> <strong style="color:#bf0140"> <img src="../images/trophy.png" width="15" height="15"> Champion </strong>
                         </div>
 
 
