--- a/publication/index.html
+++ b/publication/index.html
@@ -487,7 +487,7 @@
                           <a href="">OSPC: Detecting Harmful Memes with Large Language Model as a Catalyst</a> 
                           <img src="https://img.shields.io/badge/LLM-orange"><br>
                           <span class="author_list">Jingtao Cao, Zheng Zhang, <strong>Hongru WANG</strong>, Bin Liang, Hao Wang, Kam-fai Wong </span><br>
-                          <span><i>Online Safety Prize Challenge, WWW 2024</i></span> <strong style="color:#bf0140"> <img src="../images/trophy.png" width="15" height="15"> Champion </strong>
+                          <span><i>Online Safety Prize Challenge, WWW 2024</i></span> <strong style="color:#bf0140"> <img src="../images/trophy.png" width="15" height="15"> (Champion) </strong>
                         </div>
 
 
