--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/RL-olive"> <br>
           <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong </span> <br>
-          <span><i>ICASSP 2022</i></span>
+          <span><i>ICASSP 2022</i></span> (probably the first work of RLHF)
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
