--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <div class="col-12 col-lg-9">
 
         <ul>
-          <li>Sep 2024: Fives papers are accepted by <em>EMNLP 2024</em> (3 main 2 findings), including my first-author AppBench. AppBench is the first benchmark focus on the execution of multiple APIs from various Apps (graph strcuture and persmission management). This is the future Apple Intelligence ! &#x1F525; &#x1F525; &#x1F525; </li>
+          <li>Sep 2024: Fives papers are accepted by <em>EMNLP 2024</em> (3 main 2 findings), including my first-author work: AppBench. AppBench is the first benchmark focus on the execution of multiple APIs from various Apps (graph strcuture and persmission management). This is the future Apple Intelligence ! &#x1F525; &#x1F525; &#x1F525; </li>
 
 
           <li>Aug 2024: One paper is accepted by <em>NLPCC 2024</em>, see u at Hangzhou, a very nice and beautiful place. </li>
