--- a/publication/index.html
+++ b/publication/index.html
@@ -300,6 +300,7 @@
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
+                          <strong style="color:#bf0140"> (<img src="../images/trophy.png" width="15" height="15"> Best Paper Award @Doctoral Forum) </strong>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -479,7 +480,7 @@
                           <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion .. </a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, et. al, and Kam-Fai Wong</span><br>
-                          <span><i>SIGHAN, ACL 2024</i></span> <strong style="color:#bf0140"> (<img src="../images/trophy.png" width="15" height="15"> Best Paper Award) </strong>
+                          <span><i>SIGHAN, ACL 2024</i></span> <strong style="color:#bf0140"> (<img src="../images/trophy.png" width="15" height="15"> Best Paper Award) </strong>  <a href="./documents/sighan.pdf">[Certification]</a></li>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
