--- a/publication/index.html
+++ b/publication/index.html
@@ -480,7 +480,7 @@
                           <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion .. </a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, et. al, and Kam-Fai Wong</span><br>
-                          <span><i>SIGHAN, ACL 2024</i></span> <strong style="color:#bf0140"> (<img src="../images/trophy.png" width="15" height="15"> Best Paper Award) </strong>  <a href="./documents/sighan.pdf">[Certification]</a></li>
+                          <span><i>SIGHAN, ACL 2024</i></span> <strong style="color:#bf0140"> (<img src="../images/trophy.png" width="15" height="15"> Best Paper Award) </strong>  <a href="../documents/sighan.pdf">[Certification]</a></li>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
