--- a/publication/index.html
+++ b/publication/index.html
@@ -139,6 +139,15 @@
                 <div class="col-lg-12">
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2405.16802.pdf">AutoCV: Empowering Reasoning with Automated Process Labeling via Confidence Variation</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Jianqiao Lu, Zhiyang Dou, <strong>Hongru Wang</strong>, Zeyu Cao, Jianbo Dai, Yingjia Wan, Yinya Huang, Zhijiang Guo </span> <br>
+                      <span><i>NeruIPS 2024</i></span>
+                    </div>
+
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">AppBench: Planning of Multiple APIs from Various APPs for Complex User Instruction</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
