--- a/talk/index.html
+++ b/talk/index.html
@@ -74,6 +74,10 @@
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex">
                         <li class="nav-item">
+                          <a class="nav-link " href="https://rulegreen.github.io/news/" data-target="#contact"><span>News</span></a>
+                        </li>
+
+                        <li class="nav-item">
                           <a class="nav-link " href="https://rulegreen.github.io/publication/" data-target="#contact"><span>Publications</span></a>
                         </li>
 
@@ -128,9 +132,9 @@
                 <div class="col-lg-12">
 
                     <ul>
-                        <li>Integrating Internal Reasoning and External Acting for Personalized Dialogue Agent</li>
+                        <li>Empowering Large Language Models: Tool Learning for Real-World Interaction</li>
                         <ul>
-                            <li>EdinburghNLP, Aug 2024</li>
+                            <li>TechBeat, Oct 2024 (Apple Intelligence, o1-like reasoning)</li>
                         </ul>
                     </ul>
                 
@@ -151,6 +155,11 @@
                 <div class="col-lg-12">
 
                     <ul>
+                        <li>Integrating Internal Reasoning and External Acting for Personalized Dialogue Agent</li>
+                        <ul>
+                            <li>EdinburghNLP, Aug 2024</li>
+                        </ul>
+                        
                         <li>A Survey of Evolution of LM-based Dialogue System</li>
                         <ul>
                             <li>OpenMMLab 社区开放麦, Dec 2023</li>
@@ -165,7 +174,7 @@
 
                         <li>Large Language Model-based Dialogue System</li>
                         <ul>
-                          <li>Techbeat (将门创投), Dec 2023
+                          <li>TechBeat (将门创投), Dec 2023
                             <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/techbeat.pptx" target="_blank" rel="noopener"> PPT </a>
                           </li>
                           <li>深度学习自然语言处理, Nov 2023
