--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <blockquote>
 
-        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
+        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. My long-term objective is to achieve the \textit{impossible triangle} between safety, personalization and autonomy of language agent. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
 
         <!-- Calendly link widget begin -->
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -357,7 +357,7 @@
       -->
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href=""><strong>AppBench: Planning of Multiple APIs from Various APPs for Complex User Instruction</strong></a> 
+          <a href=""><strong>AppBench: Planning of Multiple APIs from Various APPs for Complex Instruction</strong></a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
@@ -384,7 +384,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2305.13733.pdf"><strong>Enhancing Large Language Models Against Inductive Instructions with Dual-critique Prompting</strong></a> 
+          <a href="https://arxiv.org/abs/2305.13733.pdf"><strong>Enhancing Large Language Models Against Inductive Instructions with Dual-critique ..</strong></a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Safety-red"> <br>
           <span class="author_list">Rui Wang*, <u>Hongru WANG</u>*, Fei Mi, Yi Chen, Boyang Xue, Kam-Fai Wong, Ruifeng Xu </span><br>
@@ -401,7 +401,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="/papers/uniretriever/universal_retrieval.pdf"><strong>UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive .. Retrieval</strong></a> 
+          <a href="/papers/uniretriever/universal_retrieval.pdf"><strong>UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive ..</strong></a> 
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Boyang Xue, Baohang Zhou, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Kam-Fai Wong </span><br>
@@ -419,7 +419,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2310.08840.pdf"><strong>Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</strong></a>
+          <a href="https://arxiv.org/abs/2310.08840.pdf"><strong>Large Language Models as Source Planner for Personalized ..</strong></a>
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Minda Hu, Yang Deng, et. al, Irwin King, Kam-Fai Wong </span> <br>
@@ -432,7 +432,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2305.11792.pdf"><strong>Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</strong></a>
+          <a href="https://arxiv.org/abs/2305.11792.pdf"><strong>Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue ..</strong></a>
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang*</u>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
@@ -493,7 +493,7 @@
       <div class="col-12 col-lg-9">
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</a> 
+          <a href=""><strong>UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</strong></a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Wenyu Huang, Yang Deng, et. al, Jeff Z Pan, Kam-Fai Wong </span> <br>
@@ -502,7 +502,7 @@
 
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for .. </a> 
+          <a href="https://arxiv.org/abs/2402.13514.pdf"><strong>Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for .. </strong></a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
@@ -511,7 +511,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2311.16789">A Survey of the Evolution of Language Model-Based Dialogue Systems </a> 
+          <a href="https://arxiv.org/abs/2311.16789"><strong>A Survey of the Evolution of Language Model-Based Dialogue Systems </strong></a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Lingzhi Wang, Yiming Du, Liang Chen, Jingyan Zhou, Yufei Wang, Kam-Fai Wong </span> <br>
           <span> Under Review </span>
@@ -603,11 +603,42 @@
       </div>
   
       <div class="col-12 col-lg-9">
-        <ul>
+        <table style="font-size:12pt">
+              <tbody>
+
+                  <tr>
+                      <span class="cvdate">2024.08&nbsp;-&nbsp;Present </span>
+                      <p>
+                        <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0">
+                        <strong>ByteDance</strong>
+                        <span>Research Intern</span>
+                      </p>
+                      
+                  </tr>
+
+                  <tr>
+                    <span class="cvdate">2020.08&nbsp;-&nbsp;2021.09</span>
+                    <p>
+                      <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0">
+                      <strong>The Chinese University of Hong Kong</strong>
+                      <span>Research Assistant</span>
+
+                    </p>
+
+                  </tr>
+
+
+              </tbody>
+        </table>
+
+
+       <!--  <ul>
           <li>2020/08-2021/09, Research Assistant, <strong>CUHK</strong>, Dialogue System and Few Shot Learning at MoE Key Lab of High Conﬁdence Software Technologies</li>
           <li>2019/04-2019/07, Recommendation System Intern, <strong>Kuaishou</strong>, Music and Video Recommendation</li>
           <li>2018/07-2018/10, Data Analysis Intern, <strong>360 Finance</strong>, Data Analysis, Weekly and Monthly Report</li>
-        </ul>
+        </ul> -->
+
+        
       </div>
     </div>
 
@@ -789,7 +820,7 @@
 
   <div class="container">
     <footer class="site-footer">          
-    <span>Last updated: Mar, 2024</span>
+    <span>Last updated: Oct, 2024</span>
   </footer>
   </div>
 <div id="modal" class="modal fade" role="dialog">
