--- a/publication/index.html
+++ b/publication/index.html
@@ -317,7 +317,7 @@
                           <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
                           <img src="https://img.shields.io/badge/DS-blue">
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-                          <span class="author_list"><u>Hongru Wang*</strong>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
+                          <span class="author_list"><u>Hongru Wang*</u>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/Cue-CoT" target="_blank" rel="noopener"> Code </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_poster.pdf" target="_blank" rel="noopener"> Poster </a>
@@ -458,7 +458,7 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods ..</a>
                       <img src="https://img.shields.io/badge/TOD_DPL-teal"> <br>
-                      <span class="author_list">Wai-Chung Kwan*, <u>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong</span> <br>
+                      <span class="author_list">Wai-Chung Kwan*, <u>Hongru WANG*</u>, Huimin Wang, Kam-Fai Wong</span> <br>
                       <span><i>Machine Intelligence Research</i> </span>
                     </div>
                 
